2015-01-08  Glenn Morris  <rgm@gnu.org>

	* files.el (file-tree-walk): Remove; of unknown authorship.  (Bug#19325)

2015-01-07  K. Handa  <handa@gnu.org>

	* international/ccl.el (define-ccl-program): Improve the docstring.

2015-01-06  Sam Steingold  <sds@gnu.org>

	* shell.el (shell-display-buffer-actions): Remove,
	use `display-buffer-alist' instead.

2015-01-05  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/xref.el (xref--insert-xrefs): Add `help-echo' property
	to the references.

2015-01-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-category-defaults): New var.
	Set unicode-name to use substring completion.
	(completion-category-defaults): Set it to nil.

2015-01-04  Dmitry Gutov  <dgutov@yandex.ru>

	Add mouse interaction to xref.
	* progmodes/xref.el (xref--button-map): New variable.
	(xref--mouse-2): New command.
	(xref--insert-xrefs): Add `mouse-face' and `keymap' properties to
	the inserted references.

2015-01-04  Paul Eggert  <eggert@cs.ucla.edu>

	Less 'make' chatter for lisp dir
	* Makefile.in (THEFILE): Define to be 'no-such-file' by default,
	to make it clearer that the caller must specify it.
	(compile-onefile): Remove, replacing by ...
	($(THEFILE)c): ... new rule.  This lets us use AM_V_GEN here.
	($(THEFILE)c, .el.elc, $(MH_E_DIR)/mh-loaddefs.el)
	($(TRAMP_DIR)/tramp-loaddefs.el, $(CAL_DIR)/cal-loaddefs.el)
	($(CAL_DIR)/diary-loaddefs.el, $(CAL_DIR)/hol-loaddefs.el):
	Use AM_V_GEN to lessen 'make' chatter.
	(.el.elc): Omit duplicate comment.

	Less 'make' chatter in batch mode
	* emacs-lisp/autoload.el (autoload-generate-file-autoloads):
	* emacs-lisp/bytecomp.el (byte-compile-file):
	* files.el (save-buffer, basic-save-buffer):
	* international/quail.el (quail-update-leim-list-file):
	Don't output messages like "Generating ..." in batch mode.

2015-01-04  Dmitry Gutov  <dgutov@yandex.ru>

	Unbreak `mouse-action' property in text buttons.
	* button.el (push-button): Fix regression from 2012-12-06.
