@@ -1,5 +1,10 @@
 2015-01-08  Eli Zaretskii  <eliz@gnu.org>
 
+	* dispnew.c (buffer_posn_from_coords): Fix the value of the column
+	returned for right-to-left screen lines.  (Before the change on
+	2014-12-30, the incorrectly-computed X pixel coordinate concealed
+	this bug.)
+
 	* .gdbinit (xsymname): New subroutine.
 	(xprintsym, initial-tbreak): Use it to access the name of a symbol
 	in a way that doesn't cause GDB to barf when it tries to
